--- a/BodyCareProducts/src/main/webapp/css/style.css
+++ b/BodyCareProducts/src/main/webapp/css/style.css
@@ -34,7 +34,7 @@
 	border-radius: 15px;
 }
 
-#countries{
+.selectRegion{
 	border: 1px solid #ebebeb;
     height: 50px;
     width: 100%;
@@ -3789,7 +3789,8 @@ ol {
 		display: block;
 		font-size: 18px;
 		color: #2B394A;
-		margin-bottom: 13px;
+		
+		font-weight: normal;
 }
 
 .register-login-section {
@@ -3818,6 +3819,7 @@ ol {
 	font-size: 18px;
 	color: #2B394A;
 	margin-bottom: 13px;
+	font-weight: normal;
 }
 
 
