--- a/BodyCareProducts/src/main/webapp/css/style.css
+++ b/BodyCareProducts/src/main/webapp/css/style.css
@@ -4001,6 +4001,142 @@ ol {
 	color: #2B394A;
 }
 
+/*---------------------
+  order-history
+-----------------------*/
+.my-account li{
+	list-style: none;
+}
+.my-account a.active{
+	color: #d79681;
+}
+.my-account a{
+	color: #2B394A;
+}
+.order-history-table {
+	margin-bottom: 40px;
+}
+
+.order-history-table table {
+	width: 100%;
+	min-width: 480px;
+	/* border: 1px solid #C5D0DD; */
+}
+
+.order-history-table table tr th {
+	font-size: 16px;
+	color: #2B394A;
+	font-weight: 700;
+	border-bottom: 1px solid #d79681;
+	text-align: center;
+	padding: 18px 0 19px;
+	text-transform: uppercase;
+}
+
+.order-history-table table tr th.p-name {
+	text-align: left;
+}
+
+.order-history-table table tr td {
+	text-align: center;
+	padding-bottom: 25px;
+	padding-top: 25px;
+}
+
+.order-history-table table tr td.first-row {
+	padding-top: 30px;
+}
+
+.order-history-table table tr td.cart-pic {
+	width: 21%;
+}
+
+.order-history-table table tr td.cart-title {
+	text-align: left;
+}
+
+.order-history-table table tr td.cart-title h5 {
+	color: #2B394A;
+}
+
+.order-history-table table tr td.p-price {
+	width: 16%;
+}
+
+.order-history-table table tr td.p-price,
+.order-history-table table tr td.total-price {
+	color: #d79681;
+	font-size: 16px;
+	font-weight: 700;
+}
+
+.order-history-table table tr td.qua-col {
+	width: 16%;
+}
+
+.order-history-table table tr td.qua-col .quantity {
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
+}
+
+.order-history-table table tr td.qua-col .pro-qty {
+	width: 123px;
+	height: 46px;
+	border: 2px solid #d79681;
+	padding: 0 15px;
+	float: left;
+	border-radius: 15px;
+}
+
+.order-history-table table tr td.qua-col .pro-qty .qtybtn {
+	font-size: 24px;
+	color: #d79681;
+	float: left;
+	line-height: 38px;
+	cursor: pointer;
+	width: 18px;
+}
+
+.order-history-table table tr td.qua-col .pro-qty .qtybtn.dec {
+	font-size: 30px;
+}
+
+.order-history-table table tr td.qua-col .pro-qty input {
+	text-align: center;
+	width: 52px;
+	font-size: 14px;
+	font-weight: 700;
+	border: none;
+	color: #2B394A;
+	line-height: 40px;
+	float: left;
+	background-color: #f5f5f5;
+}
+
+.order-history-table table tr td.total-price {
+	width: 12%;
+}
+
+.order-history-table table tr td.close-td {
+	font-size: 16px;
+	color: #2B394A;
+	width: 8%;
+}
+
+.order-history-table table tr td.close-td i {
+	cursor: pointer;
+}
+.order-history-table table tr td a:hover {
+	color: #2B394A;
+}
+.order-history-table table tr td a {
+	color: #2B394A;
+}
+
 /* ------------------------------ Responsive Media Styles ---------------------------- */
 
 @media only screen and (min-width: 1200px) and (max-width: 1920px) {
