--- a/BodyCareProducts/src/main/webapp/css/style.css
+++ b/BodyCareProducts/src/main/webapp/css/style.css
@@ -4198,6 +4198,9 @@ ol {
 .order-history-table table tr td a {
 	color: #2B394A;
 }
+.order-history-table tbody tr td{
+	color: #2B394A;
+}
 
 /* ------------------------------ Responsive Media Styles ---------------------------- */
 
