--- a/BodyCareProducts/src/main/webapp/css/style.css
+++ b/BodyCareProducts/src/main/webapp/css/style.css
@@ -37,7 +37,7 @@
 
 
 
-.group-input i{
+.group-input i {
 
 	position: absolute;
 	top: 55px;
@@ -47,31 +47,34 @@
 
 }
 
-.group-input small{
-	
+.group-input small {
+
 	visibility: hidden;
 
 }
 
 
 
-.group-input.error .fa-exclamation-circle{
+.group-input.error .fa-exclamation-circle {
 	visibility: visible;
 	color: rgb(238, 0, 0);
 
 }
 
-.group-input.success  .fa-check-circle{
+.group-input.success .fa-check-circle {
 	visibility: visible;
 	color: rgb(0, 112, 47);
 
 }
-.group-input.error small{
+
+.group-input.error small {
 	/* margin-left: 5px; */
-	
+
 	visibility: visible;
 
 }
+
+
 
 /* .group-input.error #phoneError{
 	margin-left: 5px;
@@ -82,15 +85,16 @@
 
 
 
-.defaultBorders{
+.defaultBorders {
 	border-radius: 15px;
 }
 
-.selectRegion{
+.selectRegion {
 	border: 1px solid #ebebeb;
-    height: 50px;
-    width: 100%;
+	height: 50px;
+	width: 100%;
 }
+
 html,
 body {
 	height: 100%;
@@ -154,9 +158,11 @@ button:focus,
 textarea:focus {
 	outline: none;
 }
-a{
+
+a {
 	text-decoration: none;
 }
+
 a:hover,
 a:focus {
 	text-decoration: none;
@@ -295,12 +301,14 @@ ol {
 		border: 4px solid #f44336;
 		border-left-color: transparent;
 	}
+
 	50% {
 		-webkit-transform: rotate(180deg);
 		transform: rotate(180deg);
 		border: 4px solid #673ab7;
 		border-left-color: transparent;
 	}
+
 	100% {
 		-webkit-transform: rotate(360deg);
 		transform: rotate(360deg);
@@ -315,11 +323,13 @@ ol {
 		border: 4px solid #f44336;
 		border-left-color: transparent;
 	}
+
 	50% {
 		-webkit-transform: rotate(180deg);
 		border: 4px solid #673ab7;
 		border-left-color: transparent;
 	}
+
 	100% {
 		-webkit-transform: rotate(360deg);
 		border: 4px solid #f44336;
@@ -475,9 +485,10 @@ ol {
 	margin-left: 15px;
 }
 
-.navBarContainer{
+.navBarContainer {
 	background-color: #6C4A4A;
 }
+
 .inner-header {
 	padding: 39px 0;
 }
@@ -542,10 +553,10 @@ ol {
 	font-size: 16px;
 	color: #d1d1d1;
 	padding-left: 20px;
-	
-	border-radius: 15px ;
+
+	border-radius: 15px;
 	border: 1px solid #d4d3d3;
-	
+
 }
 
 .inner-header .advanced-search .input-group button {
@@ -573,7 +584,7 @@ ol {
 }
 
 .inner-header .nav-right li.heart-icon a {
-	color:#2B394A;
+	color: #2B394A;
 	position: relative;
 	display: inline-block;
 }
@@ -883,9 +894,11 @@ ol {
 .slicknav_menu {
 	display: none;
 }
-.account-name{
+
+.account-name {
 	font-size: larger;
 }
+
 /*---------------------
   Hero Section
 -----------------------*/
@@ -1294,9 +1307,9 @@ ol {
 	list-style: none;
 	display: inline-block;
 	background: #ffffff;
-	border-radius:10px 15px 0px 0px;
+	border-radius: 10px 15px 0px 0px;
 
-	
+
 }
 
 .product-item .pi-pic ul li.w-icon.active a {
@@ -1334,7 +1347,7 @@ ol {
 }
 
 .product-item .pi-text a h5 {
-	color:#2B394A;
+	color: #2B394A;
 }
 
 .product-item .pi-text .product-price {
@@ -1689,7 +1702,7 @@ ol {
 	font-size: 16px;
 	border: none;
 	padding-left: 20px;
-	border-radius:  15px ;
+	border-radius: 15px;
 }
 
 .newslatter-item .subscribe-form input::-webkit-input-placeholder {
@@ -1711,6 +1724,7 @@ ol {
 .newslatter-item .subscribe-form input::placeholder {
 	color: #b1b1b1;
 }
+
 .newslatter-item .subscribe-form button {
 	display: inline-block;
 	color: #ffffff;
@@ -2264,6 +2278,7 @@ ol {
 	font-size: 12px;
 	color: #999591;
 }
+
 .product-details .pd-desc {
 	margin-bottom: 24px;
 }
@@ -2278,14 +2293,17 @@ ol {
 	color: #d79681;
 	font-weight: 700;
 }
+
 .product-details .pd-desc h5 {
 	color: #000;
 	font-weight: 700;
 }
+
 .product-details .pd-desc h6 {
 	color: #636363;
 	font-size: 12px;
 }
+
 .product-details .pd-desc a {
 	color: rgb(192, 50, 50);
 	font-weight: 500;
@@ -2302,7 +2320,8 @@ ol {
 	display: inline-block;
 	margin-left: 13px;
 }
-.product-details .pd-description{
+
+.product-details .pd-description {
 	margin-bottom: 24px;
 }
 
@@ -2316,10 +2335,12 @@ ol {
 	color: #d79681;
 	font-weight: 700;
 }
+
 .product-details .pd-description h5 {
 	color: #000;
 	font-weight: 700;
 }
+
 .product-details .pd-description h6 {
 	color: #636363;
 	font-size: 12px;
@@ -2493,7 +2514,7 @@ ol {
 
 .product-tab {
 	padding-top: 60px;
-	
+
 }
 
 .tab-item ul li:nth-child(1) a {
@@ -2752,6 +2773,13 @@ ol {
 	padding-top: 10px;
 	margin-bottom: 45px;
 }
+
+
+
+
+
+ 
+
 
 /*---------------------
   Related Products
@@ -3690,7 +3718,6 @@ ol {
 	border: 1px solid #ebebeb;
 	border-radius: 5px;
 	padding-left: 20px;
-	margin-bottom: 30px;
 }
 
 .blog-details-inner .leave-comment .comment-form textarea {
@@ -3703,7 +3730,7 @@ ol {
 	border-radius: 5px;
 	padding-left: 20px;
 	padding-top: 10px;
-	margin-bottom: 45px;
+
 }
 
 /*---------------------
@@ -3812,7 +3839,7 @@ ol {
 	border: 1px solid #ebebeb;
 	border-radius: 5px;
 	padding-left: 20px;
-	margin-bottom: 30px;
+	margin-bottom: 10px;
 }
 
 .contact-form .leave-comment .comment-form textarea {
@@ -3825,7 +3852,7 @@ ol {
 	border-radius: 5px;
 	padding-left: 20px;
 	padding-top: 10px;
-	margin-bottom: 35px;
+	
 }
 
 .contact-form .leave-comment .comment-form .site-btn {
@@ -3898,28 +3925,29 @@ ol {
 /*---------------------
   Register Form
 -----------------------*/
-.pageBody{
-	
-	background:url(../img/skinCarePics/22.png) ;
+.pageBody {
+
+	background: url(../img/skinCarePics/22.png);
 	background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+	background-size: cover;
+	background-position: center;
 
 }
-.registerLabel{
-	
-		display: block;
-		font-size: 18px;
-		color: #2B394A;
-		
-		font-weight: normal;
+
+.registerLabel {
+
+	display: block;
+	font-size: 18px;
+	color: #2B394A;
+
+	font-weight: normal;
 }
 
 .register-login-section {
 	padding-top: 72px;
 	padding-bottom: 80px;
 	font-weight: bold;
-	
+
 }
 
 .register-form h2,
@@ -3944,7 +3972,6 @@ ol {
 	font-weight: normal;
 }
 
-
 .register-form form .group-input input,
 .login-form form .group-input input {
 	border: 1px solid #ebebeb;
@@ -3955,15 +3982,17 @@ ol {
 	border-radius: 15px;
 }
 
-.register-form form .group-input.error input{
+
+form .group-input .error input {
 	border-color: rgb(238, 0, 0);
 
 }
 
-.register-form form .group-input.success input{
-	border-color:  rgb(0, 112, 47);
 
-}
+
+
+
+
 
 .register-form form .register-btn,
 .register-form form .login-btn,
@@ -3990,9 +4019,10 @@ ol {
 	text-transform: uppercase;
 	position: relative;
 }
-.sign-in:hover{
+
+.sign-in:hover {
 	background-color: #2B394A;
-	color:#ffffff
+	color: #ffffff
 }
 
 .register-form .switch-login .or-login:before,
@@ -4066,23 +4096,27 @@ ol {
 	color: #2B394A;
 }
 
-.product-image{
+.product-image {
 	color: #2B394A;
 	border-radius: 15px;
 	font-size: medium;
 }
+
 /*---------------------
   order-history
 -----------------------*/
-.my-account li{
+.my-account li {
 	list-style: none;
 }
-.my-account a.active{
+
+.my-account a.active {
 	color: #d79681;
 }
-.my-account a{
+
+.my-account a {
 	color: #2B394A;
 }
+
 .order-history-table {
 	margin-bottom: 40px;
 }
@@ -4200,13 +4234,16 @@ ol {
 .order-history-table table tr td.close-td i {
 	cursor: pointer;
 }
+
 .order-history-table table tr td a:hover {
 	color: #2B394A;
 }
+
 .order-history-table table tr td a {
 	color: #2B394A;
 }
-.order-history-table tbody tr td{
+
+.order-history-table tbody tr td {
 	color: #2B394A;
 }
 
@@ -4216,9 +4253,11 @@ ol {
 	.inner-header .advanced-search .input-group button {
 		right: -14px;
 	}
+
 	.product-item .pi-pic ul li a {
 		padding: 16px 12px 12px 11px;
 	}
+
 	.nav-item .nav-menu li a {
 		padding: 16px 45px 15px;
 	}
@@ -4236,42 +4275,52 @@ ol {
 	.inner-header .advanced-search .category-btn {
 		max-width: 36%;
 	}
+
 	.inner-header .advanced-search .input-group {
 		max-width: 64%;
 	}
+
 	.nav-item .nav-menu li a {
 		padding: 16px 26px 15px;
 	}
+
 	.hero-items .owl-nav button[type=button] {
 		left: 5px;
 	}
+
 	.hero-items .owl-nav button[type=button].owl-next {
 		right: 5px;
 	}
+
 	.countdown-timer .cd-item {
 		margin-right: 26px;
 	}
+
 	.product-details .quantity .primary-btn.pd-cart {
 		padding: 14px 30px 10px;
 	}
+
 	.tab-item ul li a {
 		padding: 18px 39px;
 	}
+
 	.inner-header .advanced-search .input-group button {
 		right: -7px;
 	}
+
 	.product-shop .product-item .pi-pic ul li a {
 		padding: 16px 12px 12px 11px;
 	}
+
 	.product-shop .product-item .pi-pic img {
 		padding: 16px 12px 12px 11px;
 		border-radius: 15px;
 	}
-	
+
 	.related-products .product-item .pi-pic ul li a {
 		padding: 16px 12px 12px 11px;
 	}
-	
+
 	.related-products .product-item .pi-pic img {
 		padding: 16px 12px 12px 11px;
 		border-radius: 15px;
@@ -4282,52 +4331,67 @@ ol {
 	.banner-section {
 		padding: 80px 0 50px;
 	}
+
 	.single-banner {
 		margin-bottom: 30px;
 	}
+
 	.women-banner {
 		padding-right: 0;
 		padding-left: 0;
 	}
+
 	.product-large {
 		margin-left: 0;
 		margin-right: 0;
 	}
+
 	.deal-of-week {
 		margin-left: 0;
 		margin-right: 0;
 	}
+
 	.product-slider .owl-nav button[type=button] {
 		display: none;
 	}
+
 	.man-banner {
 		padding-right: 0;
 		padding-left: 0;
 	}
+
 	.place-order {
 		padding-top: 30px;
 	}
+
 	.blog-tags {
 		padding-bottom: 40px;
 	}
+
 	.blog-details-inner .blog-post .prev-blog {
 		margin-bottom: 40px;
 	}
+
 	.contact-form {
 		padding-top: 40px;
 	}
+
 	.product-large.m-large {
 		margin-top: 40px;
 	}
+
 	.hero-items .owl-nav button[type=button] {
 		left: 5px;
 	}
+
 	.hero-items .owl-nav button[type=button].owl-next {
 		right: 5px;
 	}
+
 	.product-shop.page-details .product-details {
 		padding-top: 30px;
 	}
+
 	.inner-header .advanced-search .input-group button {
 		right: -8px;
 	}
@@ -4339,53 +4403,69 @@ ol {
 	.header-top .ht-right .login-panel {
 		padding-left: 10px;
 	}
+
 	.header-top .ht-right .top-social {
 		padding-right: 10px;
 	}
+
 	.header-top .ht-left .mail-service {
 		padding-right: 10px;
 	}
+
 	.header-top .ht-left .phone-service {
 		padding-left: 10px;
 	}
+
 	.header-top .ht-right .top-social a {
 		margin-left: 10px;
 	}
+
 	.inner-header .advanced-search .category-btn {
 		max-width: 40%;
 		padding-right: 25px;
 	}
+
 	.inner-header .advanced-search .input-group {
 		max-width: 60%;
 	}
+
 	.inner-header .nav-right li {
 		margin-left: 8px;
 	}
+
 	.nav-item .nav-depart .depart-btn {
 		padding: 14px 40px 14px 18px;
 	}
+
 	.nav-item .nav-menu li a {
 		padding: 16px 10px 15px;
 	}
+
 	.instagram-photo .insta-item .inside-text h5 {
 		font-size: 14px;
 	}
+
 	.tab-item ul li a {
 		padding: 18px 39px;
 	}
+
 	.hero-items .off-card {
 		left: 62%;
 	}
+
 	.blog-details-inner .blog-post .prev-blog {
 		padding-left: 30px;
 	}
+
 	.blog-details-inner .blog-post .next-blog {
 		padding-right: 30px;
 	}
+
 	.blog-sidebar,
 	.produts-sidebar-filter {
 		padding-top: 50px;
 	}
+
 	.checkout-content input {
 		margin-top: 50px;
 	}
@@ -4398,165 +4478,210 @@ ol {
 		width: 50%;
 		height: 300px;
 	}
+
 	.copyright-reserved .copyright-text {
 		float: none;
 		margin-bottom: 10px;
 		text-align: center;
 	}
+
 	.copyright-reserved .payment-pic {
 		float: none;
 		text-align: center;
 	}
+
 	.header-top .ht-left,
 	.header-top .top-social {
 		display: none;
 	}
+
 	.header-top .ht-right .login-panel {
 		padding-top: 9px;
 		padding-bottom: 7px;
 	}
+
 	.header-top .ht-right .lan-selector {
 		margin-top: 5px;
 		margin-bottom: 5px;
 	}
+
 	.inner-header .advanced-search .category-btn {
 		display: none;
 	}
+
 	.inner-header .advanced-search .input-group {
 		max-width: 100%;
 	}
+
 	.inner-header {
 		padding: 0;
 	}
+
 	.inner-header .logo {
 		text-align: center;
 	}
+
 	.inner-header .nav-right {
 		text-align: left;
 	}
+
 	.inner-header .nav-right li:first-child {
 		margin-left: 0;
 	}
+
 	.nav-item .nav-depart .depart-btn {
 		padding: 14px 50px 14px 18px;
 	}
+
 	.nav-item {
 		background: transparent;
 	}
+
 	.nav-item .nav-menu {
 		display: none;
 	}
+
 	.slicknav_menu {
 		display: block;
 		background: transparent;
 		text-align: center;
 		margin-top: -48px;
 	}
+
 	.slicknav_nav {
 		background: #333;
 	}
+
 	.slicknav_nav ul {
 		margin: 0;
 		text-align: left;
 	}
+
 	.slicknav_nav a,
 	.slicknav_nav .slicknav_row {
 		margin: 0;
 	}
+
 	.slicknav_nav .dropdown a {
 		padding-left: 25px;
 	}
+
 	.nav-item .nav-depart {
 		display: none;
 	}
+
 	.slicknav_btn {
 		border-radius: 0;
 		background-color: #d79681;
 		display: inline-block;
 		right: -16px;
 	}
+
 	.slicknav_nav .slicknav_row,
 	.slicknav_nav a {
 		padding: 8px 15px;
 	}
+
 	.slicknav_nav a:hover {
 		border-radius: 0;
 		background: #d79681;
 		color: #fff;
 	}
+
 	.slicknav_nav .slicknav_row:hover {
 		border-radius: 0;
 		background: #d79681;
 		color: #fff;
 	}
+
 	.inner-header .nav-right li.cart-icon .cart-hover {
 		left: -50px;
 	}
+
 	.product-show-option p {
 		text-align: left;
 	}
+
 	.tab-item ul li a {
 		padding: 18px 51px;
 		margin-bottom: 10px;
 	}
+
 	.cart-table {
 		overflow: auto;
 	}
+
 	.cart-table table tr th {
 		font-size: 12px;
 	}
+
 	.hero-items .single-hero-items {
 		padding: 110px 25px 80px;
 		height: auto;
 		background: left center;
 	}
+
 	.hero-items .single-hero-items h1 {
 		font-size: 40px;
 	}
+
 	.blog-details-inner .tag-share .details-tag ul li {
 		margin-right: 10px;
 	}
+
 	.blog-details-inner .tag-share .blog-share .social-links a {
 		margin-left: 15px;
 	}
+
 	.blog-details-inner .blog-detail-title p:before {
 		left: -135px;
 		width: 100px;
 	}
+
 	.blog-details-inner .blog-detail-title p:after {
 		right: -135px;
 		width: 100px;
 	}
+
 	.hero-items .off-card {
 		display: none;
 	}
+
 	.ps-slider .owl-nav button[type=button] {
 		left: 0;
 	}
+
 	.ps-slider .owl-nav button[type=button].owl-next {
 		right: 0;
 	}
+
 	.blog-details-inner .blog-post .prev-blog {
 		padding-left: 30px;
 	}
+
 	.blog-details-inner .blog-post .next-blog {
 		padding-right: 30px;
 	}
+
 	.blog-details-inner .posted-by {
 		padding: 40px 25px;
 		text-align: center;
 	}
+
 	.blog-details-inner .posted-by .pb-pic {
 		float: none;
 		margin-bottom: 30px;
 	}
+
 	.blog-details-inner .posted-by .pb-text {
 		padding-left: 0;
 	}
+
 	.blog-sidebar,
 	.produts-sidebar-filter {
 		padding-top: 50px;
 	}
+
 	.checkout-content input {
 		margin-top: 50px;
 	}
@@ -4568,76 +4693,97 @@ ol {
 	.instagram-photo .insta-item {
 		width: 100%;
 	}
+
 	.inner-header .advanced-search .category-btn {
 		display: none;
 	}
+
 	.inner-header .advanced-search .input-group {
 		max-width: 100%;
 	}
+
 	.inner-header .nav-right li.cart-icon .cart-hover {
 		width: 270px;
 		padding: 20px;
 	}
+
 	.countdown-timer .cd-item {
 		margin-right: 5px;
 		padding: 10px 6px;
 	}
+
 	.product-show-option .select-option {
 		display: inline-block;
 	}
+
 	.product-show-option .select-option .sorting.nice-select {
 		margin-bottom: 10px;
 	}
+
 	.product-details .quantity .primary-btn.pd-cart {
 		padding: 14px 20px 10px;
 	}
+
 	.tab-item ul li a {
 		padding: 18px 30px;
 		margin-bottom: 10px;
 	}
+
 	.specification-table table tr td.p-catagory {
 		width: 160px;
 	}
+
 	.blog-details-inner .blog-post .next-blog .nb-pic i {
 		display: none;
 	}
+
 	.blog-details-inner .blog-post .prev-blog .pb-pic i {
 		display: none;
 	}
+
 	.blog-details-inner .tag-share .details-tag {
 		float: none;
 		margin-bottom: 10px;
 	}
+
 	.blog-details-inner .tag-share .blog-share {
 		float: none;
 	}
+
 	.blog-details-inner .blog-detail-title p:before {
 		left: -62px;
 		width: 50px;
 	}
+
 	.blog-details-inner .blog-detail-title p:after {
 		right: -62px;
 		width: 50px;
 	}
+
 	.blog-details-inner .posted-by .pb-pic {
 		float: none;
 		margin-bottom: 15px;
 	}
+
 	.blog-details-inner .posted-by .pb-text {
 		padding-left: 0;
 		display: block;
 	}
+
 	.checkout-form .place-order .order-total {
 		padding-left: 20px;
 		padding-right: 20px;
 	}
+
 	.contact-widget .cw-item .ci-icon {
 		float: none;
 		margin-bottom: 5px;
 	}
+
 	.contact-widget .cw-item .ci-text {
 		padding-left: 0;
 	}
+
 	.benefit-items .single-benefit {
 		padding-left: 15px;
 		padding-right: 15px;
