--- a/BodyCareProducts/src/main/webapp/css/style.css
+++ b/BodyCareProducts/src/main/webapp/css/style.css
@@ -2778,7 +2778,7 @@ ol {
 
 
 
- 
+
 
 
 /*---------------------
@@ -3852,7 +3852,7 @@ ol {
 	border-radius: 5px;
 	padding-left: 20px;
 	padding-top: 10px;
-	
+
 }
 
 .contact-form .leave-comment .comment-form .site-btn {
@@ -4793,30 +4793,38 @@ form .group-input .error input {
 
 
 .alert {
-  padding: 20px;
-  background-color: #d79681;
-  color: white;
-  opacity: 1;
-  transition: opacity 0.6s;
-  margin-bottom: 15px;
+	padding: 20px;
+	background-color: #d79681;
+	color: white;
+	opacity: 1;
+	transition: opacity 0.6s;
+	margin-bottom: 15px;
 }
 
-.alert.success {background-color: #04AA6D;}
-.alert.info {background-color: #2196F3;}
-.alert.warning {background-color: #ff9800;}
+.alert.success {
+	background-color: #04AA6D;
+}
+
+.alert.info {
+	background-color: #2196F3;
+}
+
+.alert.warning {
+	background-color: #ff9800;
+}
 
 .closebtn {
-  margin-left: 15px;
-  color: white;
-  font-weight: bold;
-  float: right;
-  font-size: 22px;
-  line-height: 20px;
-  cursor: pointer;
-  transition: 0.3s;
+	margin-left: 15px;
+	color: white;
+	font-weight: bold;
+	float: right;
+	font-size: 22px;
+	line-height: 20px;
+	cursor: pointer;
+	transition: 0.3s;
 }
 
 .closebtn:hover {
-  color: black;
+	color: black;
 
 }
