--- a/BodyCareProducts/src/main/webapp/css/style.css
+++ b/BodyCareProducts/src/main/webapp/css/style.css
@@ -35,7 +35,24 @@
 	visibility: hidden;
 } */
 
+#userNameLink{
+	color: #d79681;
+	font-size: 20px;
+	font-weight: bold;
+	text-transform: uppercase; 
+	
+}
 
+#userNameLink:link{
+	color: #d79681;
+	
+}
+
+#userNameLink:hover{
+	
+	font-size: 22px;
+	
+}
 
 .group-input i {
 
@@ -93,6 +110,7 @@
 	border: 1px solid #ebebeb;
 	height: 50px;
 	width: 100%;
+	
 }
 
 html,
