fixed button,get product id to js and validatin on error

--- a/BodyCareProducts/src/main/webapp/css/style.css
+++ b/BodyCareProducts/src/main/webapp/css/style.css
@@ -101,6 +101,30 @@
 
 
 
+#navigationButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 20px;
+    right: 4vw;
+    left: 92vw;
+    color: white;
+    /* width: 6vw;
+    height: 6vh; */
+    background-color: #d79681;
+	padding:1vh 4vh ;
+    border: rgba(66 ,103 ,178,0.6);
+    border-radius: 90%;
+    opacity: 0.7;
+	text-decoration:none;
+	box-shadow: 2px 2px 5px rgba(0,0,0,0.25);
+	position: fixed;
+    /* right: 0;
+    bottom: 0; */
+	z-index: 1030;
+	
+}
+
 
 .defaultBorders {
 	border-radius: 15px;
