--- a/BodyCareProducts/src/main/webapp/css/style.css
+++ b/BodyCareProducts/src/main/webapp/css/style.css
@@ -1359,7 +1359,7 @@ ol {
 	color: #ffffff;
 }
 
-.product-item .pi-pic ul li a {
+.product-item .pi-pic ul li .adddd{
 	font-size: 16px;
 	font-weight: 700;
 	color: #252525;
